# gardener

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-publish.yml
public/: index.html
public/static/: boardEditor.js  home.js  pollPatchState.js  styles.css
public/views/: upload_success.html
src/: api.rs  boards.rs  compilation_worker.rs  env_config.rs  health_checks.rs  main.rs  patches.rs  routes.rs  upload.rs  views.rs
templates/: about.html  about_content.md  board_editor.html  home.html  upload_success.html
