[package]
name = "pd2dsy4web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-multipart = "0.5"
actix-web = "4"
env_logger = "0.10"
futures-util = "0.3"
lazy_static = "1"
log = "0.4"
regex = "1"
uuid = { version = "1.3", features = ["v4"] }
