[package]
name = "gardener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-multipart = "0.5"
actix-web = "4"
anyhow = "1"
askama = "0.11"
chrono = "0.4"
env_logger = "0.10"
futures-util = "0.3"
lazy_static = "1"
log = "0.4"
markdown = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process"] }
tokio-util = "0.7"
uuid = { version = "1.3", features = ["v4"] }
